Thu Nov 12 13:49:13 CET 2009 (Manuel Serrano):

	*** configure: Fix MacOS X configuration.

	*** Fix JVM string supports (on MacOS X), non-ascii JVM strings
	where not correctly supported.
	

Fri Oct 23 11:44:40 CEST 2009 (Manuel Serrano):

	* api/web/src/Llib/{xml,html}.scm: improve the HTML parser.
	

Tue Sep  8 08:13:24 CEST 2009 (Manuel Serrano):

	* runtime/Llib/dsssl.scm: accept #!rest after #!key (see the
	documentation).
	

Mon Aug 31 15:56:10 CEST 2009 (Manuel Serrano):

	*** comptime/Ast/sexp.scm: "lambda" form no longer use the "public"
	keyword labels.

	
Fri Jul 24 10:44:10 CEST 2009 (Manuel Serrano):

	*** runtime/Ieee/input.scm: enforce empty strings on eof for 
	read-chars functions.
	

Tue Jul  7 09:03:21 CEST 2009 (Manuel Serrano):

	*** api/mail/src/Llib/rfc2045.scm: improve mime multipart decoding.
	

Mon Jul  6 11:42:58 CEST 2009 (Manuel Serrano):

	*** runtime/Llib/unicode.scm: fix utf-8 decoding (#xc3...#xde were
	not correctly decoded).
	

Sat Jul  4 07:02:16 CEST 2009 (Manuel Serrano):

	*** runtime/Clib/cports.c: CLOSE-OUTPUT-PORT was liable to raise
	an exception and thus not close its file descriptors which causes
	descriptors leaks.
	

Fri Jul  3 10:49:41 CEST 2009 (Manuel Serrano):

	*** api/pthread/src/Llib/pthread.sch: fix $pthread-nil for Java.
	

Thu Jul  2 18:26:25 CEST 2009 (Manuel Serrano):

	*** comptime/SavJvm/out.scm: fix a compiler bug when the code to
	be compiled comes from stdin.
	

Tue Jun 30 14:15:15 CEST 2009 (Manuel Serrano):

	*** runtime/Jlib/output_pipe_port.java: add the missing Java 
	implementation of output pipe ports!
	

Mon Jun 29 17:04:17 CEST 2009 (Manuel Serrano):

	*** comptime/Ast/sexp.scm, runtime/Eval/evcompile.scm: fix keyword
	shadowing to conform R5RS specification.
	

Mon Jun 29 09:38:30 CEST 2009 (Cyprien Nicolas):

	*** configure: improve gmp configuration.
	

Tue Jun 23 14:40:23 CEST 2009 (Manuel Serrano):

	*** runtime/Eval/evmodule.scm: add *load-path* to eval include
	module clauses.
	
