@@ -1,4 +1,4 @@
 ;; Automatically generated file (don't edit)
 (module tools_date (export (bigloo-date)))
 
-(define (bigloo-date)  " Fri Dec 18 19:25:27 CET 2009 ")
+(define (bigloo-date)  " Tue Dec 22 08:33:06 CET 2009 ")
